nbproject/private/Default-build.log
arm-none-eabi-gcc -Wall -g -std=gnu99 -Os   -Werror -mlittle-endian -mcpu=cortex-m4  -march=armv7e-m  -mthumb -mfpu=fpv4-sp-d16 -mfloat-abi=hard -ffunction-sections -fdata-sections -I . -I Drivers/CMSIS/Include -I Drivers/CMSIS/Device/ST/STM32F3xx/Include -DSTM32F303xC -I Drivers/STM32F3xx_HAL_Driver/Inc -I Drivers/BSP/STM32F3-Discovery -I Drivers/STM32_USB_Device_Library/Core/Inc -I Drivers/STM32_USB_Device_Library/Class/CDC/Inc -c -o build/main.o main.c -MMD -MF deps/main.d
In file included from Drivers/BSP/STM32F3-Discovery/stm32f3_discovery_accelerometer.h:53:0,
                 from main.c:5:
Drivers/BSP/STM32F3-Discovery/../Components/lsm303dlhc/lsm303dlhc.h:468:25: error: unknown type name 'LSM303DLHCMag_InitTypeDef'
 void LSM303DLHC_MagInit(LSM303DLHCMag_InitTypeDef *LSM303DLHC_InitStruct);
                         ^
main.c:9:24: fatal error: lsm303dlhc.h: No such file or directory
compilation terminated.
Makefile:151: recipe for target 'build/main.o' failed
make: *** [build/main.o] Error 1
